# TestAutomationPlayground

./: .gitignore  NOTES.md  UI_Test_Automation_Playground.md  conftest.py  main.py  package-lock.json  package.json  playwright.config.js  pom.xml  pyproject.toml  selenium_waits.py
Auto_Wait/: Exercise_Auto_Wait.md
Class_Attribute/: Exercise_Class_Attribute.md
Client_Side_Delay/: Exercise_Client_Side_Delay.md
Disabled_Input/: Exercise_Disabled_Input.md
Dynamic_Table/: Exercise_Dynamic_Table.md
File_Upload/: Exercise_File_Upload.md
Hidden_Layers/: Exercise_Hidden_Layers.md
Mouse_Over/: Exercise_Mouse_Over.md
Non-Breaking_Space/: Exercise_Non-Breaking_Space.md
Progress_Bar/: Exercise_Progress_Bar.md
Scrollbars/: Exercise_Scrollbars.md
Shadow_DOM/: Exercise_Shadow_DOM.md
Visibility/: Exercise_Visibility.md
exercises/: base_page_selenium.py
exercises/AJAX_Data/: Exercise_AJAX_Data.md
exercises/Alerts/: Exercise_Alerts.md
exercises/Animated_Button/: Exercise_Animated_Button.md
exercises/Class_Attribute/: Exercise_Class_Attribute.md
exercises/Click/: Exercise_Click.md
exercises/Dynamic_ID/: Exercise_Dynamic_ID.md
exercises/Dynamic_Table/: Exercise_Dynamic_Table.md
exercises/Frames/: Exercise_Frames.md
exercises/Load_Delay/: Exercise_Load_Delay.md
exercises/Overlapped_Element/: Exercise_Overlapped_Element.md
exercises/Sample_App/: Exercise_Sample_App.md
exercises/Shadow_DOM/: Exercise_Shadow_DOM.md
exercises/Text_Input/: Exercise_Text_Input.md
exercises/Verify_Text/: Exercise_Verify_Text.md
(+256 files in other folders)
